add backend spotless formatting checks (#123)